...
    <string name="chat_notice_label">notice</string>
    <string name="chat_failed">Failed</string>
    <string name="chat_day_today">Today</string>
    <string name="chat_day_yesterday">Yesterday</string>
    <string name="chat_composer_placeholder">Message</string>
    <string name="chat_composer_send">Send</string>
    <string name="chat_composer_tools_open">Open composer tools</string>
    <string name="chat_composer_tools_close">Close composer tools</string>
    <string name="chat_composer_emoji">Insert emoji</string>
    <string name="chat_composer_emoji_close">Close emoji picker</string>
    <string name="chat_composer_replying_to">Replying to %1$s</string>
    <string name="chat_composer_cancel_reply">Cancel reply</string>
    <string name="chat_composer_attachment">Add attachment</string>
    <string name="chat_composer_emoji_help">Open the emoji picker to add an emoji.</string>
...
